syntax = "proto3";
package MongoQueries;
option optimize_for = LITE_RUNTIME;

message Listing{
    required string _id = 1;
    required string title = 2;
    repeated string tags = 3;
    required string desc = 4;
    required string cdesc = 5;
    optional float lat = 6;
    optional float lng = 7;
    required string section = 8;
    required string usr = 9;
    required string lang = 10;
    required string tagsLang = 11;
    optional string img = 12;
    optional string div = 13;
    optional bool a = 14;
    optional bool d = 15;
    optional bool offer = 16;
}

message GetListingsSince{
    repeated Listing documents = 1;
    int32 count = 2;
}